# python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
booboo/: __init__.py  _client.py  _middleware.py  _scrubber.py  _stacktrace.py
tests/: test_client.py  test_public_api.py  test_scrubber.py  test_stacktrace.py
