[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "booboo-sdk"
version = "0.9.0"
description = "Lightweight error tracking for Python"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.20"]
license = "MIT"
authors = [{ name = "booboo.dev", email = "hello@booboo.dev" }]
keywords = ["error-tracking", "monitoring", "debugging", "exceptions", "booboo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B904"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.urls]
Homepage = "https://booboo.dev"
Repository = "https://github.com/getbooboo/python"
Issues = "https://github.com/getbooboo/python/issues"
Changelog = "https://github.com/getbooboo/python/blob/main/CHANGELOG.md"
